[gd_scene load_steps=3 format=3]

[ext_resource type="PackedScene" uid="uid://ctwabcdef01234" path="res://scenes/desktop/tool_window.tscn" id="1_tw"]
[ext_resource type="Script" path="res://scenes/tools/hardware_viewer.gd" id="2_hv"]

[node name="HardwareViewer" instance=ExtResource("1_tw")]
custom_minimum_size = Vector2(660, 480)
script = ExtResource("2_hv")

[node name="Margin" type="MarginContainer" parent="ContentArea"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="ContentArea/Margin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TopRow" type="HBoxContainer" parent="ContentArea/Margin/VBox"]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="ContentArea/Margin/VBox/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "HARDWARE"

[node name="CreditsLabel" type="Label" parent="ContentArea/Margin/VBox/TopRow"]
layout_mode = 2
text = "Credits: 0"

[node name="HSplit" type="HSplitContainer" parent="ContentArea/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 300

[node name="BoardPanel" type="PanelContainer" parent="ContentArea/Margin/VBox/HSplit"]
layout_mode = 2

[node name="BoardMargin" type="MarginContainer" parent="ContentArea/Margin/VBox/HSplit/BoardPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BoardVBox" type="VBoxContainer" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MoboSection" type="VBoxContainer" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="MoboLabel" type="Label" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox/MoboSection"]
layout_mode = 2
text = "MOTHERBOARD"

[node name="MoboSlot" type="Button" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox/MoboSection"]
layout_mode = 2
text = "..."

[node name="StackSection" type="VBoxContainer" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="StackLabel" type="Label" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox/StackSection"]
layout_mode = 2
text = "COMPUTE STACK"

[node name="StackSlot" type="Button" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox/StackSection"]
layout_mode = 2
text = "..."

[node name="StackUsageLabel" type="Label" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox/StackSection"]
layout_mode = 2
visible = false
text = ""

[node name="NetworkSection" type="VBoxContainer" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="NetworkLabel" type="Label" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox/NetworkSection"]
layout_mode = 2
text = "NETWORK"

[node name="NetworkSlot" type="Button" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox/NetworkSection"]
layout_mode = 2
text = "..."

[node name="RamSection" type="VBoxContainer" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="RamLabel" type="Label" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox/RamSection"]
layout_mode = 2
text = "RAM SLOTS"

[node name="RamSlots" type="VBoxContainer" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox/RamSection"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="SecuritySection" type="VBoxContainer" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="SecurityLabel" type="Label" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox/SecuritySection"]
layout_mode = 2
text = "SECURITY"

[node name="SecuritySlot" type="Button" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox/SecuritySection"]
layout_mode = 2
text = "[ EMPTY ]"

[node name="DetonateBtn" type="Button" parent="ContentArea/Margin/VBox/HSplit/BoardPanel/BoardMargin/BoardVBox/SecuritySection"]
layout_mode = 2
visible = false
text = "[ DETONATE ]"

[node name="ShopPanel" type="PanelContainer" parent="ContentArea/Margin/VBox/HSplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShopMargin" type="MarginContainer" parent="ContentArea/Margin/VBox/HSplit/ShopPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ShopVBox" type="VBoxContainer" parent="ContentArea/Margin/VBox/HSplit/ShopPanel/ShopMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ShopHeader" type="Label" parent="ContentArea/Margin/VBox/HSplit/ShopPanel/ShopMargin/ShopVBox"]
layout_mode = 2
text = "SELECT A SLOT"

[node name="ShopScroll" type="ScrollContainer" parent="ContentArea/Margin/VBox/HSplit/ShopPanel/ShopMargin/ShopVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ShopList" type="VBoxContainer" parent="ContentArea/Margin/VBox/HSplit/ShopPanel/ShopMargin/ShopVBox/ShopScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6
